delete techinacals
